# declarative-turing-machine

./: CMakeLists.txt  README.md
include/: decl_components.hpp  turing_machine.hpp  utility.hpp
src/: CMakeLists.txt  flip_least_significant.cpp  unary_to_binary.cpp  unary_to_binary_flattened.cpp  unary_to_binary_skeleton.cpp
